<resources>
    <string name="app_name">Simulation</string>
    <string name="buttonStart">Start Simulation</string>
    <string name="textWaiting">Waiting Room</string>
    <string name="textProcedure">Procedure Rooms</string>
    <string name="textDefault">Default</string>
    <string name="buttonAdd">Add</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonEdit">Update</string>
    <string name="textData">Attribute</string>
    <string name="editData">Value</string>
    <string name="textProcedureRoomTitle">Procedure Room</string>
    <string name="travelTime">Travel Time:</string>
    <string name="cooldownTime">Cooldown Time:</string>
    <string name="buttonExit">Exit</string>
    <string name="textClientTitle">Patient</string>
    <string name="ArrivalTime">Arrival Time:</string>
    <string name="AmountToAdd">Amount To Add:</string>
    <string name="textProcedureTitle">Procedure</string>
    <string name="procedureName">Procedure Name:</string>
    <string name="procedureTime">Completion Time:</string>
    <string name="textProcedures">Procedures:</string>
    <string name="textProceduresAdd">Procedures To Add:</string>
    <string name="textProcedureTypes">Procedure Types</string>
    <string name="textScopes">Scope Storage</string>
    <string name="textNurses">Nurses\t\t\t\t\t\t\t\t\tTechnicians</string>
    <string name="textSinks">Sinks</string>
    <string name="textScopeTitle">Scope</string>
    <string name="textCleaningTime">Cleaning Time</string>
    <string name="textScopeType">Scope Type</string>
    <string name="textReprocessors">Reprocessors</string>
    <string name="textDoctors">Doctors</string>
    <string name="scopeTypeTile">Scope Type</string>
    <string name="scopeTypeName">Scope Type Name:</string>
    <string name="Price">Price:</string>
    <string name="scopeTypeProcedures">Valid Procedures:</string>
    <string name="buttonViewProcedures">View Procedure Types</string>
    <string name="buttonViewScopeTypes">View Scope Types</string>
    <string name="buttonViewReprocessorTypes">View Reprocessor Types</string>
    <string name="avgProcedureTime">Average Completion Time:</string>
    <string name="textTowerType">Tower Type</string>
    <string name="nameTowerType">Name:</string>
    <string name="priceTowerType">Price:</string>
    <string name="procedureTowerTypes">Tower Types:</string>
    <string name="towerTypeScopes">Scope Types:</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="towerTypeScopeTypes">Valid Scope Types:</string>
    <string name="buttonViewLeakTesterTypes">View Leak Tester Types</string>
    <string name="ViewTowerTypes">View Tower Types</string>
    <string name="doctorPostProcedure">Doctor Post Procedure Time</string>
    <string name="textLoadDelay">Reprocessor Load Delay</string>
    <string name ="divider">----------------------------------------------------------------------------</string>
</resources>
